# zigron_pppos_client

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
components/mcp3002/: CMakeLists.txt  mcp3002.c
main/: CMakeLists.txt  Kconfig.projbuild  http_server.cpp  http_server.h  led_mng.cpp  main.c  wifi_app.cpp  wifi_app.h
main/webpage/: index.html
